--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,59 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
+}  
+.phone-img {
+  float: left;
+}
+
+}
+.text {
+  background-image: url("../images/frame.png");
+  border: 1px solid black;
+}
+.container {
+  width: 65%;
+  margin: 0 auto;
+}
+.right-article {
+  float: right;
+  width: 40%;
+  margin-top: -10px;
+  
+}
+.header {
+  background-color: steelblue;
+  height: 300px;
+}
+.left {
+  float: left;
+}
+.clear{
+  clear: both;
+}
+.phone-img {
+  margin-top: -150px;
+}
+.right-article, .brand {
+  margin-top: -45px;
+  padding-right: 30px;
+}
+h2 {
+  color: steelblue
+}
+p{
+  line-height: 100%;
+}
+footer {
+  text-align: center;
+  color: steelblue;
+  align-items: stretch;
+  box-sizing: border-box;
+}
+button {
+  border: 1px solid black;
+  background-color: #66b3ff;
+  border-radius: 5px;
+  text: bold;
 }
