background frame changes

--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,60 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+
+
+.heading-img {
+  width: 100%;
+  height: 300px;
+}
+
+.instagram-main {
+  position: relative;
+  right: 400px;
+  bottom: 150px;
+  float: right;
+}
+
+.instagram-main button {
+  display: inline-block;
+  font-weight: bold;
+  position: relative;
+  bottom: 25px;
+  left: 100px;
+  color: #fff;
+  background-color: #6A8EAC;
+}
+
+.phone-image {
+  position: relative;
+  float: left;
+  left: 100px;
+  bottom: 200px;
+}
+
+/* .insta-information {
+  clear: right;
+  position: relative;
+  left: 100px;
+  bottom: 100px;
+  width: 70%;
+} */
+
+
+.insta-information {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: relative;
+  left: 160px;
+  bottom: 150px;
+  clear: right;
+  width: 70%;
+}
+
+.footer {
+  margin: 10px;
+  width: 100%
+}
+
