--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,39 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+h1 {
+  color: #06365f;
+}
+
+.blueBackground{
+  position: fixed;
+  height: 35%;
+  width: 100%;
+  z-index: -1;
+  background-color: #06365f
+}
+
+.phones{
+  position: absolute;
+  float: left;
+  margin-left: 50px;
+  width: 60%;
+  margin: 100px 20px 100px;
+}
+.rightBlock{
+  float: left;
+  margin: 10px;
+  width: 60%;
+  position: absolute;
+  top: 100px;
+  right: 0;
+}
+.rightText{
+ background-image: url(../images/frame.png);
+ background-position: center;
+ background-repeat: no-repeat;
+ background-size: contain;
+ width: 600px;
+ margin-top: -20px;
+
+}
