--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,76 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+h1{
+  text-align: center;
+}
+
+.para{
+  margin: 0 auto;
+  position: relative;
+  left: 140px;
+  bottom: 280px;
+  width: 30%;
+}
+
+.background{
+  background-color: #517091;
+  height: 350px;
+  width: 100%;
+  position: absolute;
+  z-index: -1;
+}
+.phones{
+  position: relative;
+  left: 200px;
+  top: 150px;
+}
+.iphone{
+  position: relative;
+}
+
+.brand{
+  position: relative;
+  left: 280px;
+  bottom: 280px;
+}
+
+.login-btn {
+  float: right;
+  position: relative;
+  bottom: 830px;
+  right: 330px;
+  margin-bottom: 100px;
+  background: linear-gradient(#6c90ad, #4a7598);
+  border: .5px solid #1c5380;
+  border-radius: 1px;
+  padding: 5px 7px;
+  color: white;
+}
+.relative-box {
+  position: relative;
+  border-color: #06365f;
+}
+ul {
+  text-align: center;
+  clear: both;
+  list-style: none;
+  margin: 0 auto;
+  position: relative;
+  bottom: 350px;
+  color: #125988;
+  text-transform: uppercase;
+}
+ul li{
+  display: inline;
+}
+.white-back{
+  background-image: url(../images/frame.png);
+  position: relative;
+  background-repeat: no-repeat;
+  bottom: 270px;
+  padding-left: 40px;
+  padding-top: 20px;
+  padding-right: 50px;
+}
