--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,49 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.lista{
+bottom: 10px;
+position: absolute;
+text-align: center;
+word-spacing: 20px;
+left: 400px
+}
+   
+   
+   .fondoblanco{
+    background-image: url(../images/frame.png);
+    background-color: white;
+    height: 380px;  
+    background-repeat: no-repeat;
+    position: relative;
+    width: 500px;
+    left: 600px;
+    top: 150px;
+    border-top-style: round;
+    border-right-style: round;
+    border-bottom-style: none;
+    border-left-style: round;
+}
+
+.fondo{
+  background-color:#06365f;
+  height: 400px
+}
+
+.phone{
+position: absolute;
+float: left;
+top: 150px;
+left: 180px
+}
+
+.texto{
+position: absolute;
+
+}
+
+.logo{
+  position: absolute;
+  right: 350px;
+  top: 80px
+}
