--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,60 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.halfbackground {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 45%;
+    background-color: rgba(18, 87, 136, 0.842);
+    z-index: -1
+}
+.container {
+  width: 80%;
+  margin: 100px auto 0;
+}
+.imagefloatphone {
+  float: left;
+}
+.iglogospacing {
+  float: left;
+  width: 40%;
+  padding-left: 50px;
+  padding-top: 25px;
+
+}
+
+.igdescunderlogo {
+  float: left;
+  width: 40%;
+  padding-left: 50px;
+  padding-top: 25px;
+}
+.login {
+  float: left;
+  position: relative;
+  right: 50px;
+  top: 50px;
+}
+
+.applestore {
+  float: left;
+  width: 40%;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 150px;
+}
+
+.aboutus {
+  float: left;
+  padding-top: 90px;
+  clear: both;
+  padding-left: 175px; 
+  font-weight: bold;
+  word-spacing: 5px;
+  color: #06365f;
+
+}
+
+
+clear: both
