--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,71 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 50px 30px 50px 30px;
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background: url("./../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.login-button {
+  margin: 10px;
+  background-color:#1c5380;
+  text-align: center;
+  border-radius: 8px;
+  width: 100px;
+  float: right;
+  padding: 3px;
+
+}
+.login-button p {
+  color: white;
+  font-weight: bold;
+  display: inline;
+  padding: 8px;
+}
+
+
+
+
+
+
+.main-section {
+  padding: 0px 30px 20px 30px;
+  background-color: white;
+}
+.main-section p {
+  font-size: 12px;
+}
+.main-section h1 {
+  color:#06365f;
+}
+
+
+.badge-buttons img {
+  padding-right: 5px;
+}
+
+
+.instagram-footer li {
+  list-style-type: none;
+  text-align: center;
+  margin-left: -70px;
+  color: #1c5380;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 10px;
+  line-height: 15px;
+}
+
+.trademark {
+  color: silver;
 }
