--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,98 @@
-/*
+    /*
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+    /* ---- reset ---- */
+    
+    html {
+        box-sizing: border-box;
+    }
+    
+    *,
+    *:before,
+    *:after {
+        box-sizing: inherit;
+    }
+    
+    body {
+        margin: 0;
+        padding: 0;
+    }
+    /* ---- typography ---- */
+    
+    body {
+        font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+        margin: 0;
+        background-image: url("../images/bgtile.png");
+        background-repeat: repeat-x;
+    }
+    
+    h1 {}
+    
+    h2 {
+      color: #1c5380;
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
-}
+    }
+    
+    h3 {}
+    
+    p {
+        margin: 0;
+        color: #06365f;
+    }
+    /* ---- layout ---- */
+    
+    #site-header {
+        padding: 30px 0;
+        color: white;
+    }
+    
+    #site-footer {
+        color: white;
+        padding: 60px 0;
+    }
+    
+    #site-main {
+        margin-bottom: 60px;
+    }
+    
+    .container {
+        margin: 0 20px;
+    }
+    
+    .section {
+        margin-bottom: 20px;
+        padding-top: 20px;
+    }
+    
+    @media (min-width: 768px) {
+        .container {
+            max-width: 728px;
+            margin: 0 auto;
+        }
+    }
+
+    .frame {
+      background-image: url("/Users/george/Documents/Coding/lab-css-instagram-clone/starter-code/images/frame.png");
+ background-repeat: no-repeat; 
+ background-size: cover;  
+ padding: 20px; 
+    }
+
+    .apartbadge {
+      display: inline-block;
+      width:100%;
+      padding-top: 25px;
+    }
+
+    .button {
+      background-color: #1c5380;
+      border-radius: 3px;
+      display: inline-block;
+      border: 1px solid #1c5380;
+      color: white;
+      padding: 5px;
+      float: right
+    }
+    /* ---- components ---- */
