--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,172 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
+
+/* ---- reset ---- */
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+ 
+body {
+  margin: 0;
+  padding: 0;
+}
+
+
+/* ---- typography ---- */
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+h1 {
+    text-align: center;
+    color: white;
+    font-size: 60px;
+    font-weight: 400;
+    line-height: 600px;
+}
+
+h2 {
+  text-align: justify;
+  color: #06365f;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+h3 {}
+
+p {
+  margin: 0;
+  text-align: left;
+  color: #1C1C1C;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 200;
+  padding-top: 10px;
+}
+
+
+
+/* ---- layout ---- */
+
+div {
+  border: 1px solid black;
+}
+
+header {
+  height: 40vh;
+  background-color: #1c5380;
+}
+
+#site-header {
+  padding: 30px 0;
+  /*color: white;*/
+  /*background: #111;*/
+  overflow: hidden;
+  position: relative;
+}
+
+#site-header img {
+  float: left;
+  max-width: 200px;
+}
+
+#site-header div {
+  float: right;
+  background-color: #1c5380;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+#site-header a {
+  padding: 0px 3px; 
+  color: white;
+  font-weight: 400;
+  
+}
+
+.content-container {
+  padding-top: 5vh;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-bottom: auto;
+  position: absolute;
+  top: 50px;
+}
+
+.content {
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-bottom: 20px;
+}
+.app-links {
+  /*margin-bottom: 20px;*/
+  display: inline-block;
+}
+
+.app-links a {
+  margin-right: 10px;
+}
+
+#site-footer {
+  color: white;
+  padding: 20px 0;
+  text-align: center;
+  /*background: #111;*/
+}
+
+#site-footer ul {
+  padding-left: 0px;
+}
+
+#site-footer li {
+  list-style-type: none;
+  margin-bottom: 5px;
+}
+
+#site-footer a {
+  color: #1c5380;
+  text-decoration: none;
+  font-weight: 400;
+}
+
+#site-footer a:hover {
+  color: #06365f;
+}
+
+#site-footer span {
+  text-align: center;
+  color: grey;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+/*
+#site-main {
+  margin-bottom: 60px;
+}
+*/
+/*
+.container {
+  margin: 0 20px;
+}
+
+*/
+
+
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 728px;
+    margin: 0 auto;
+  }
+}
+
