--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,61 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.container {
+  padding-top: 100px;
+}
+
+.content {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.clearfix {
+  clear: both;
+}
+
+.col {
+  width: 50%;
+  float: left;
+}
+
+.header-presentation .logo {
+  float: left;
+}
+
+.header-presentation .login {
+  float: right;
+}
+
+.intro-presentation h2 {
+  color: #06365f;
+}
+
+.nav li {
+  list-style-type: none;
+  display: inline-block;
+  color: #666;
+  text-transform: uppercase;
+}
+
+.nav li a {
+  color: #1c5380;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-right: 10px;
 }
