--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css?family=Arimo');
+
 /*
 Colors to use:
 dark blue: #06365f
@@ -5,6 +8,86 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 200 16px/1.5 "Arimo", Arial, sans-serif;
+  background-image:url('../images/bgtile.png');
+  background-repeat: repeat-x;
   margin: 0;
+  box-sizing:border-box;
+}
+#main, footer{
+  width:70%;
+  margin:auto;
+  overflow:auto;
+}
+#main{
+  margin-top: 5%;
+}
+
+footer p{
+  color: grey;
+}
+ul{
+  list-style-type:none;
+}
+li{
+  display:inline-block;
+  font-weight: 700;
+}
+h2, footer li{
+  color: #06365f;
+}
+aside, article{
+  float:left;
+}
+aside{
+  width: 30%;
+}
+article{
+  width:50%;
+  margin-left: 5%;
+}
+article section{
+  padding: 5%;
+  border-radius:5px;
+}
+button{
+  background: linear-gradient(#487399, #7899b7);
+  color:white;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  margin-top: 33%;
+}
+header{
+  overflow:auto;
+}
+#brand-name{
+  float:left;
+}
+#log-in{
+  float:right;
+}
+
+#log-in::after{
+  content:'';
+  visibility: hidden;
+  clear:both;
+}
+article section::after{
+  content: url('./images/frame.png');
+  width:100%;
+  height: 20px;
+}
+footer{
+  position:absolute;
+  bottom:0;
+  left: 20%;
+}
+footer > div > * {
+  display: inline-block;
+}
+
+footer > div{
+  margin:auto;
+  width: 80%;
 }
