--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,34 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+div, img, section {
+  border: 1px solid black
+}
+
+.top-icons{
+}
+.icon-top-right{
+  float: right;
+}
+.icon-top-left{
+  float: left;
+}
+.background {
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: auto;
+  margin-top:20vh;
+}
+.main-info: {
+  margin: 20px
+}
+.text-box{
+  margin: 40px;
+}
+li{
+  list-style:none;
 }
