--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,120 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h2{
+  font-size: 1.6em;
+  color:#06365f;
+}
+
+p{
+  font-size: 0.9em;
+  line-height: 1.5em;
+}
+
+li{
+  list-style-type: none;
+  display: inline-block;
+}
+
+.btest{
+  border: 1px solid #000000;
+}
+
+.header{
+  height: 240px;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  position: relative;
+}
+
+.phones{
+  width: 300px;
+  margin-top: 80px;
+  text-align: center;
+  position: absolute;
+  left: 18%;
+}
+
+.phones img{
+  height: 430px;
+  width: auto;
+}
+
+.description{
+  width:500px;
+  float: left;
+  padding: 0;
+  margin-top: 80px;
+  text-align: left;
+  position: absolute;
+  right: 18%;
+}
+
+.description-background{
+  width: 100%;
+  padding: 10px 10px 10px 40px;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  box-sizing: border-box;
+}
+
+.login{
+  width: 100px;
+  height: 40px;
+  padding: 0;
+  text-align: center;
+  position: absolute;
+  right: 10px;
+  top: 20px;
+  background: linear-gradient(to bottom, #3f9ce2,#1e5799);
+  border: none;
+  box-shadow: 0px 0px 2px #0e0e0e;
+  border-radius: 3px;
+}
+
+.login p, img{
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.login p{
+  margin-left: 7px;
+  color: #ffffff;
+  font-weight: 700;
+}
+
+.badges{
+  width: 100%;
+}
+
+.badges img{
+  margin-right: 15px;
+}
+
+ul{
+  padding-left: 0;
+}
+
+.footer{
+  width: 100%;
+  bottom: 20px;
+  margin-top:100px;
+  font-size: 0.9em;
+  text-align: center;
+  position: absolute;
+}
+
+.footer li{
+  margin-right: 8px;
+}
+
+.instagram{
+  margin-left: 30px;
+  color: #9c9c9c;
 }
