--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,62 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+.clearfix {
+  clear: both;
+}
+
+header {
+  margin-top: 15%;
+  height: 50px;
+  background-color: rebeccapurple;
+  height: 100%;
+}
+
 body {
+  
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  width: 70%;
+  margin: 0 auto;
+  background-color: blue;
+  background-image: url("../images/bgtile.png");
+  background-position: center top;
+  background-repeat: repeat-x;
+
+
+}
+
+#container {
+  width: 100%;
+  background-color: yellow;
+}
+
+#mobiles {
+  display:block;
+  float: left;
+  height: 300px;
+  width: 40%;
+  background-color: red;
+}
+
+#text {
+  display:block;
+  float: left;
+  width: 60%;
+  height: 100%;
+  background-color: green;
+}
+
+footer {
+  width: 100%;
+  background-color: yellowgreen;
+}
+
+footer li {
+  float: left;
+}
+
+.apps {
+  height: 100%;
+  margin-top: 10%;
 }
