--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css?family=Arimo');
+@import url('https://fonts.googleapis.com/css?family=Arimo:400,700');
 
 /*
 Colors to use:
@@ -8,14 +8,14 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Arimo", Arial, sans-serif;
+  font: 200 16px/1.5 "Arimo:300", Arial, sans-serif;
   background-image:url('../images/bgtile.png');
   background-repeat: repeat-x;
   margin: 0;
   box-sizing:border-box;
 }
 #main, footer{
-  width:70%;
+  width:60%;
   margin:auto;
   overflow:auto;
 }
@@ -32,9 +32,14 @@ ul{
 li{
   display:inline-block;
   font-weight: 700;
+  margin: 0 5px;
 }
 h2, footer li{
   color: #06365f;
+}
+h2{
+  font-weight: 700;
+  width: 70%;
 }
 aside, article{
   float:left;
@@ -43,12 +48,26 @@ aside{
   width: 30%;
 }
 article{
-  width:50%;
-  margin-left: 5%;
+  width:500px;
+  background: url('../images/frame.png') no-repeat;
+  margin-left: 10%;
+  position:relative;
+  z-index:1;
 }
 article section{
-  padding: 5%;
+  background:white;
+  width: 80%;
+  margin:auto;
   border-radius:5px;
+  z-index:99;
+}
+article img{
+  margin-right:15px;
+}
+article div{
+  background:white;
+  width: 97%; /*este div lo necesitamos para cubrir la transparencia del fondo fea*/
+  margin-left: 2%;
 }
 button{
   background: linear-gradient(#487399, #7899b7);
@@ -56,27 +75,19 @@ button{
   border: none;
   border-radius: 5px;
   padding: 5px;
-  margin-top: 33%;
+  margin-top: 33%
 }
 header{
   overflow:auto;
+  z-index: 98;
+  width: 500px;
+  margin-left: 40%;
 }
 #brand-name{
   float:left;
 }
 #log-in{
   float:right;
-}
-
-#log-in::after{
-  content:'';
-  visibility: hidden;
-  clear:both;
-}
-article section::after{
-  content: url('./images/frame.png');
-  width:100%;
-  height: 20px;
 }
 footer{
   position:absolute;
