--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -78,9 +78,19 @@ button{
   background: linear-gradient(#487399, #7899b7);
   color:white;
   border: none;
-  border-radius: 5px;
+  border-radius: 2px;
   padding: 5px;
-  margin-top: 33%
+  margin-top: 33% 5px 0 0;
+  font-weight: 700;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75); 
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+}
+button > img{
+  vertical-align: middle;
+}
+button > span{
+  margin-left: 5px;
 }
 header{
   overflow:auto;
