--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -80,7 +80,7 @@ button{
   border: none;
   border-radius: 2px;
   padding: 5px;
-  margin-top: 33% 5px 0 0;
+  margin: 30% 5px 0 0;
   font-weight: 700;
   box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75); 
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
