--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,4 +1,4 @@
-
+ /*Aquí un pequeño ajuste - como no tenemos derechos de Helvetica, usamos la más próxima de Arimo*/
 @import url('https://fonts.googleapis.com/css?family=Arimo:400,700');
 
 /*
@@ -8,43 +8,56 @@ light blue: #1c5380
 */
 
 body {
+  /*Aquí un pequeño ajuste - como no tenemos derechos de Helvetica, usamos la más próxima de Arimo*/
   font: 200 16px/1.5 "Arimo:300", Arial, sans-serif;
+  /*majestuoso fondo este que nos funciona mejor que un gradiente*/
   background-image:url('../images/bgtile.png');
   background-repeat: repeat-x;
   margin: 0;
   box-sizing:border-box;
 }
 #main, footer{
+  /*Mismo width para el footer y main*/
   width:60%;
   margin:auto;
-  overflow:auto;
+  /* Overflow auto para marcar mejor nuestro main en Dev tools*/
+  overflow: auto;
 }
 #main{
   margin-top: 5%;
 }
-
-footer p{
-  color: grey;
+/* ----- Parte de HEADER ------ */ 
+header{
+  float:left;
+  overflow:auto;
+  z-index: 98;
+  /*Por hartura de responsive en este caso decidí hacer el width de article y header fijo*/
+  width: 500px;
+  margin-left: 10%;
 }
-ul{
-  list-style-type:none;
+#brand-name{
+  float:left;
 }
-li{
-  display:inline-block;
+#log-in{
+  float:right;
+}
+button{
+  background: linear-gradient(#487399, #7899b7);
+  color:white;
+  border: none;
+  border-radius: 2px;
+  padding: 5px;
+  margin: 30% 5px 0 0;
   font-weight: 700;
-  margin: 0 5px;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75); 
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 }
-h2{
-  color: #06365f;
+button > img{
+  vertical-align: middle;
 }
-footer li{
-  color: #1c5380;
-  text-transform: uppercase;
-  font-size:0.8em;
-}
-h2{
-  font-weight: 700;
-  width: 70%;
+button > span{
+  margin-left: 5px;
 }
 aside, article{
   float:left;
@@ -74,35 +87,28 @@ article div{
   width: 97%; /*este div lo necesitamos para cubrir la transparencia del fondo fea*/
   margin-left: 2%;
 }
-button{
-  background: linear-gradient(#487399, #7899b7);
-  color:white;
-  border: none;
-  border-radius: 2px;
-  padding: 5px;
-  margin: 30% 5px 0 0;
+h2{
+  color: #06365f;
+}
+footer p{
+  color: grey;
+}
+footer li{
+  color: #1c5380;
+  text-transform: uppercase;
+  font-size:0.8em;
+}
+footer ul{
+  list-style-type:none;
+}
+footer li{
+  display:inline-block;
   font-weight: 700;
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75); 
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  margin: 0 5px;
 }
-button > img{
-  vertical-align: middle;
-}
-button > span{
-  margin-left: 5px;
-}
-header{
-  overflow:auto;
-  z-index: 98;
-  width: 500px;
-  margin-left: 40%;
-}
-#brand-name{
-  float:left;
-}
-#log-in{
-  float:right;
+h2{
+  font-weight: 700;
+  width: 70%;
 }
 footer{
   position:absolute;
@@ -112,7 +118,6 @@ footer{
 footer > div > * {
   display: inline-block;
 }
-
 footer > div{
   margin:auto;
   width: 80%;
