--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -39,10 +39,18 @@ body {
 
 .header-presentation {
   padding: 30px 0;
+  position: relative;
 }
 
 .header-presentation .logo {
   float: left;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.header-presentation .logo img {
+  vertical-align: middle;
 }
 
 .header-presentation .login {
@@ -54,11 +62,15 @@ body {
   color: white;
   text-decoration: none;
   padding: 10px 20px;
+  font-weight: bold;
 }
 
 .header-presentation .login button::before {
-  content: " ";
+  content: "";
   background-image: url('../images/home.png');
+  background-size: cover;
+  padding-right: 20px;
+  margin-right: 5px;
 }
 
 .intro-presentation {
