--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -55,12 +55,16 @@ footer{
 }
 
 .log-in{
-height: 25px;
- width: 75px;
+height: 50px;
+ width: 100px;
  background: linear-gradient(white,#1c5380 );
  color: white;
- 
+ position: relative;
 float: right;
+padding: 15px;
+box-sizing: border-box;
+top: 15px;
+right: 15px;
  
 }
 
