--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,11 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 16px "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+.cabeza{
+  background-image:url("../images/bgtile.png");
+  background-size: 100% 10px;
+  
 }
