--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,9 +7,23 @@ light blue: #1c5380
 body {
   font: 16px "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-}
-.cabeza{
   background-image:url("../images/bgtile.png");
-  background-size: 100% 10px;
-  
+  background-size: 100% 30%;
+  backgroud-repeat: repeat-x;
+}
+main{
+  margin: 100px auto;
+  width: 60%;
+}
+.telefono{
+  float: left;
+  width: 50%;
+}
+.izq{
+  float: left;
+  width: 50%;
+}
+footer{
+  position: absolute;
+  bottom: 0;
 }
