--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,23 +7,56 @@ light blue: #1c5380
 body {
   font: 16px "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  background-image:url("../images/bgtile.png");
-  background-size: 100% 30%;
-  backgroud-repeat: repeat-x;
+  background:url("../images/bgtile.png") repeat-x;;
 }
 main{
   margin: 100px auto;
   width: 60%;
 }
+.boton{
+  border: solid 1px #06365f;
+  background-color: #1c5380;
+  width: 100px;
+  padding: 5px; 
+  float: left;
+  margin-top: 20px;
+  margin-left: 15px;
+}
+.boton img{
+  vertical-align: middle; 
+  margin-left: 6px;
+  margin-right: 10px;
+}
+.blanco{
+  color: white;
+}
 .telefono{
   float: left;
-  width: 50%;
+  width: 40%;
 }
 .izq{
   float: left;
-  width: 50%;
+  width: 55%;
+  margin-left: 5%;
 }
 footer{
   position: absolute;
-  bottom: 0;
+  bottom: 5%;
+  width: 60%;
+  margin-left: 30%;
+  color: #06365f;
+}
+.insta{
+  float: left;
+}
+.limpia{
+  clear: both;
+}
+.descripcion{
+  background-image: url("../images/frame.png");
+  padding: 30px;
+  background-repeat:no-repeat;
+}
+h2{
+  color: #06365f;
 }
